Maquetación y funcionalidad básica Gestión de sedes

--- a/vistas/login.html
+++ b/vistas/login.html
@@ -29,8 +29,8 @@
             </div>
             <form method="POST" id="formularioAcceso" autocomplete="off">
                 <div class="form-inputs">
-                    <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Usuario" autocomplete="off">
-                    <input type="password" class="form-control" name="contrasena" id="contrasena" placeholder="Contraseña" autocomplete="off">
+                    <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Usuario" autocomplete="nada">
+                    <input type="password" class="form-control" name="contrasena" id="contrasena" placeholder="Contraseña" autocomplete="nada">
                     <button type="submit" id="acceder" class="btn btn-primary">Acceder</button>
                     <button type="button" id="salir" class="btn btn-light">Salir</button>
                 </div>
