--- a/vistas/login.html
+++ b/vistas/login.html
@@ -23,7 +23,7 @@
 
 <body>
     <div class="main-box login-page">
-        <div class="title-page">
+        <div class="title-page-login">
             <div class="container text-center">
                 <h1 class="textoSecondaryColor">SICOAIN - Sistema de Control de Accidentes e Incidentes</h1>
             </div>
@@ -41,6 +41,7 @@
                 </div>
             </form>
         </div>
+        <div class="mainBackground"></div>
         <footer class="Footer fixed-bottom text-center">
             <h5 class="textoSecondaryColor">Desarrollado por Alexander Coronell</h5>
         </footer>
