--- a/vistas/login.html
+++ b/vistas/login.html
@@ -28,6 +28,9 @@
                 <h1 class="textoSecondaryColor">SICOAIN - Sistema de Control de Accidentes e Incidentes</h1>
             </div>
         </div>
+        <div class="logo-loginpage w-100 text-left pl-5">
+            <img src="../public/images/logo.png">
+        </div>
         <div class="login-box">
             <div class="title-login">
                 <h2>Ingrese su usuario</h2>
