Actualizada pantalla de login, se cambia boton salir por limpiar y se añade funcionalidad

--- a/vistas/login.html
+++ b/vistas/login.html
@@ -40,7 +40,7 @@
                     <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Usuario" autocomplete="off" required>
                     <input type="password" class="form-control" name="contrasena" id="contrasena" placeholder="Contraseña" autocomplete="off" required>
                     <button type="submit" id="acceder" class="btn btn-primary">Acceder</button>
-                    <button type="button" id="salir" class="btn btn-light">Salir</button>
+                    <button type="button" id="limpiar" class="btn btn-light">Limpiar</button>
                 </div>
             </form>
         </div>
